--- a/InvoiceManager/src/Invoice.Api/appsettings.json
+++ b/InvoiceManager/src/Invoice.Api/appsettings.json
@@ -1,9 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+"Serilog": {
+  "MinimumLevel": {
+    "Default": "Information",
+    "Override": {
+      "Microsoft": "Warning",
+      "System": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "WriteTo": [
+    { "Name": "Console" },
+    {
+      "Name": "File",
+      "Args": {
+        "path": "c:\\logs\\invoicemanager.log",
+        "rollingInterval": "Day"
+      }
+    }
+  ],
+  "Enrich": [ "FromLogContext" ]
+},
+"AllowedHosts": "*"
 }
