--- a/InvoiceManager/src/Invoice.Application/Invoice.Application.csproj
+++ b/InvoiceManager/src/Invoice.Application/Invoice.Application.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Invoice.Core\Invoice.Core.csproj" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Invoice.Domain\Invoice.Domain.csproj" />
   </ItemGroup>
 
 </Project>
