--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Change dir
+        cd InvoiceManager
     - name: Show current directory
       run: pwd
     - name: Setup .NET
