--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Change dir
-        cd InvoiceManager
+      run: cd InvoiceManager
     - name: Show current directory
       run: pwd
     - name: Setup .NET
