--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,27 +15,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Change dir
-      run: cd InvoiceManager
-    - name: Show current directory
-      run: pwd
+    - uses: actions/checkout@v4        
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: |
-        cd InvoiceManager
-        dotnet restore
-    - name: Show current directory
-      run: pwd
+      run: dotnet restore
+      working-directory: InvoiceManager    
     - name: Build
       run: dotnet build --no-restore
+      working-directory: InvoiceManager
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: InvoiceManager
     - name: Test with coverage
       run: dotnet test --no-build --configuration Debug --collect:"XPlat Code Coverage" --results-directory TestResults
+      working-directory: InvoiceManager
 
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v5.0.0
