--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,8 +32,15 @@ jobs:
       - name: Build
         run: dotnet build InvoiceManager/InvoiceManager.sln --no-restore --configuration Release
 
-      - name: Run tests
-        run: dotnet test InvoiceManager/InvoiceManager.sln --logger:trx
+      - name: Run tests with coverage
+        run: dotnet test InvoiceManager/InvoiceManager.sln --collect:"XPlat Code Coverage" --logger:trx
+      
+      - name: Convert coverage to Sonar format
+        uses: danielpalme/ReportGenerator-GitHub-Action@5.1.23
+        with:
+          reports: '**/coverage.cobertura.xml'
+          targetdir: 'coverage-report'
+          reporttypes: 'Cobertura'
 
       - name: End SonarCloud analysis
         run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
