--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
+      - name: install sonar scanner
+        run: dotnet tool install --global dotnet-sonarscanner
 
       - name: Install ReportGenerator
         run: |
