--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -48,6 +48,8 @@ jobs:
 
       - name: Debug:List TestResults
         run: find . -type f -name "*.xml"
+      - name: Debug: Check TestResults
+        run: ls -R
 
 
       - name: Convert coverage to Cobertura
