--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,22 +44,29 @@ jobs:
         run: dotnet build InvoiceManager/InvoiceManager.sln --no-restore
 
       - name: Run tests with coverage
-        run: dotnet test InvoiceManager/InvoiceManager.sln --no-build --logger:trx --collect:"XPlat Code Coverage"
+        run: |
+          dotnet test InvoiceManager/InvoiceManager.sln \
+            --no-build \
+            --collect:"XPlat Code Coverage" \
+            --results-directory TestResults \
+            --logger "trx;LogFileName=test_results.trx"
+
 
       - name: Debug:List TestResults
-        run: find . -type f -name "*.xml"
-        
-      - name: Debug:Check TestResults
-        run: ls -R
+        run: find . -type f -name "*.xml"      
+
+      - name: Debug coverage output
+        run: find . -type f
 
 
       - name: Convert coverage to Cobertura
         run: |
           reportgenerator \
-            -reports:"**/TestResults/*/coverage.cobertura.xml" \
+            -reports:"TestResults/**/coverage.cobertura.xml" \
             -targetdir:"coverage-report" \
             -reporttypes:Cobertura \
             -verbosity:Info
+
 
 
       - name: End SonarCloud analysis
