--- a/InvoiceManager/tests/Invoice.Tests/Invoice.Tests.csproj
+++ b/InvoiceManager/tests/Invoice.Tests/Invoice.Tests.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="6.0.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.6.4" />
